# Memos

./: .gitignore  README.md
backend/: servant-memos.cabal  stack.yaml
backend/app/: MemosCLI.hs  MemosServer.hs
backend/src/: API.hs  Client.hs  Model.hs  Server.hs
frontend/: bower.json  server.hs
frontend/src/: Main.purs
