name:                servant-memos
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/ishiy1993/servant-memos#readme
license:             BSD3
license-file:        LICENSE
author:              ishiy
maintainer:          y.ishihara.1993@gmail.com
copyright:           Copyright: (c) 2016 ishiy
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     API
                     , Model
                     , Server
                     , Client
  extensions: DataKinds
              DeriveGeneric
              OverloadedStrings
              TemplateHaskell
              TypeFamilies
              TypeOperators
              EmptyDataDecls
              FlexibleContexts
              FlexibleInstances
              GADTs
              GeneralizedNewtypeDeriving
              MultiParamTypeClasses
              QuasiQuotes
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , either
                     , mtl
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , servant-server
                     , servant-client
                     , text
                     , time
                     , transformers
                     , wai
                     , wai-extra
                     , wai-cors
                     , warp
  default-language:    Haskell2010

executable memos-server
  hs-source-dirs:      app
  main-is:             MemosServer.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-memos
  default-language:    Haskell2010

executable memos-cli
  hs-source-dirs:      app
  main-is:             MemosCLI.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-memos
  default-language:    Haskell2010

test-suite servant-memos-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-memos
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ishiy1993/servant-memos
